--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:57:51 GMT
+      - Sat, 20 Feb 2021 11:00:12 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11985'
+      - '11989'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:57:52 GMT
+      - Sat, 20 Feb 2021 11:00:13 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:57:57 GMT
+      - Sat, 20 Feb 2021 11:00:15 GMT
       etag:
-      - '"0x8D88242D23D9DA4"'
+      - '"0x8D8D58EB436E788"'
       last-modified:
-      - Fri, 06 Nov 2020 10:57:57 GMT
+      - Sat, 20 Feb 2021 11:00:15 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -89,9 +89,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:57:58 GMT
+      - Sat, 20 Feb 2021 11:00:15 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -101,7 +101,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 10:58:02 GMT
+      - Sat, 20 Feb 2021 11:00:16 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -123,11 +123,11 @@ interactions:
       If-None-Match:
       - '*'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - AppendBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 10:58:02 GMT
+      - Sat, 20 Feb 2021 11:00:16 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -139,11 +139,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:58:03 GMT
+      - Sat, 20 Feb 2021 11:00:16 GMT
       etag:
-      - '"0x8D88242D5AB246D"'
+      - '"0x8D8D58EB5045B2C"'
       last-modified:
-      - Fri, 06 Nov 2020 10:58:03 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -161,9 +161,9 @@ interactions:
       Content-Length:
       - '1024'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:58:03 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -177,11 +177,11 @@ interactions:
       content-md5:
       - DzQ7CTESaiDxM9Z8KwGKOw==
       date:
-      - Fri, 06 Nov 2020 10:58:04 GMT
+      - Sat, 20 Feb 2021 11:00:16 GMT
       etag:
-      - '"0x8D88242D68AD70B"'
+      - '"0x8D8D58EB52C5C95"'
       last-modified:
-      - Fri, 06 Nov 2020 10:58:05 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-append-offset:
@@ -202,12 +202,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob list
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:58:05 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -215,9 +219,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Fri,
-        06 Nov 2020 10:58:03 GMT</Creation-Time><Last-Modified>Fri, 06 Nov 2020 10:58:05
-        GMT</Last-Modified><Etag>0x8D88242D68AD70B</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Sat,
+        20 Feb 2021 11:00:17 GMT</Creation-Time><Last-Modified>Sat, 20 Feb 2021 11:00:17
+        GMT</Last-Modified><Etag>0x8D8D58EB52C5C95</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5 /><Cache-Control /><Content-Disposition
         /><BlobType>AppendBlob</BlobType><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -225,7 +229,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 10:58:09 GMT
+      - Sat, 20 Feb 2021 11:00:18 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -241,9 +245,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:58:10 GMT
+      - Sat, 20 Feb 2021 11:00:18 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -259,11 +263,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:58:14 GMT
+      - Sat, 20 Feb 2021 11:00:19 GMT
       etag:
-      - '"0x8D88242D68AD70B"'
+      - '"0x8D8D58EB52C5C95"'
       last-modified:
-      - Fri, 06 Nov 2020 10:58:05 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-committed-block-count:
@@ -271,7 +275,7 @@ interactions:
       x-ms-blob-type:
       - AppendBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:58:03 GMT
+      - Sat, 20 Feb 2021 11:00:17 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -291,9 +295,9 @@ interactions:
       If-None-Match:
       - '*'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:58:14 GMT
+      - Sat, 20 Feb 2021 11:00:19 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -303,7 +307,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 10:58:15 GMT
+      - Sat, 20 Feb 2021 11:00:19 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
