--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_metadata_operations.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_metadata_operations.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:34:18 GMT
+      - Sat, 20 Feb 2021 10:59:18 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11986'
+      - '11988'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:19 GMT
+      - Sat, 20 Feb 2021 10:59:18 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:34:23 GMT
+      - Sat, 20 Feb 2021 10:59:18 GMT
       etag:
-      - '"0x8D8823F874DEE96"'
+      - '"0x8D8D58E92D52B5C"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:23 GMT
+      - Sat, 20 Feb 2021 10:59:19 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -586,13 +586,13 @@ interactions:
       Content-Length:
       - '42696'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-content-type:
-      - text/x-python
+      - text/plain
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:24 GMT
+      - Sat, 20 Feb 2021 10:59:19 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -606,11 +606,11 @@ interactions:
       content-md5:
       - KpgQxTncMCTum19oVX9lng==
       date:
-      - Fri, 06 Nov 2020 10:34:28 GMT
+      - Sat, 20 Feb 2021 10:59:20 GMT
       etag:
-      - '"0x8D8823F8A80E7C4"'
+      - '"0x8D8D58E93BD53A8"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:29 GMT
+      - Sat, 20 Feb 2021 10:59:21 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -628,9 +628,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:29 GMT
+      - Sat, 20 Feb 2021 10:59:21 GMT
       x-ms-meta-a:
       - b
       x-ms-meta-c:
@@ -646,11 +646,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:34:33 GMT
+      - Sat, 20 Feb 2021 10:59:22 GMT
       etag:
-      - '"0x8D8823F8D66B3F6"'
+      - '"0x8D8D58E9473A53A"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:33 GMT
+      - Sat, 20 Feb 2021 10:59:22 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -666,9 +666,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:34 GMT
+      - Sat, 20 Feb 2021 10:59:22 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -680,11 +680,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:34:38 GMT
+      - Sat, 20 Feb 2021 10:59:23 GMT
       etag:
-      - '"0x8D8823F8D66B3F6"'
+      - '"0x8D8D58E9473A53A"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:33 GMT
+      - Sat, 20 Feb 2021 10:59:22 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-meta-a:
@@ -704,9 +704,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:39 GMT
+      - Sat, 20 Feb 2021 10:59:23 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -718,11 +718,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:34:43 GMT
+      - Sat, 20 Feb 2021 10:59:24 GMT
       etag:
-      - '"0x8D8823F9328114C"'
+      - '"0x8D8D58E95BEFEF3"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:43 GMT
+      - Sat, 20 Feb 2021 10:59:24 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -738,9 +738,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:34:44 GMT
+      - Sat, 20 Feb 2021 10:59:24 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -752,11 +752,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:34:47 GMT
+      - Sat, 20 Feb 2021 10:59:25 GMT
       etag:
-      - '"0x8D8823F9328114C"'
+      - '"0x8D8D58E95BEFEF3"'
       last-modified:
-      - Fri, 06 Nov 2020 10:34:43 GMT
+      - Sat, 20 Feb 2021 10:59:24 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
