--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_show_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_show_oauth.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 11:17:49 GMT
+      - Sat, 20 Feb 2021 11:02:43 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11989'
+      - '11983'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 11:17:50 GMT
+      - Sat, 20 Feb 2021 11:02:43 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:17:58 GMT
+      - Sat, 20 Feb 2021 11:02:44 GMT
       etag:
-      - '"0x8D882459E5D3971"'
+      - '"0x8D8D58F0CFC8A10"'
       last-modified:
-      - Fri, 06 Nov 2020 11:17:59 GMT
+      - Sat, 20 Feb 2021 11:02:44 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,11 +91,11 @@ interactions:
       Content-Length:
       - '131072'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 11:17:59 GMT
+      - Sat, 20 Feb 2021 11:02:45 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -109,11 +109,11 @@ interactions:
       content-md5:
       - DfvoqkwgtS4bi/PLbL3xkw==
       date:
-      - Fri, 06 Nov 2020 11:18:07 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -130,12 +130,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -153,17 +157,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:18:15 GMT
+      - Sat, 20 Feb 2021 11:02:48 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -182,12 +186,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:16 GMT
+      - Sat, 20 Feb 2021 11:02:48 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -205,17 +213,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:18:23 GMT
+      - Sat, 20 Feb 2021 11:02:49 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -235,13 +243,13 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-content-length:
       - '131072'
       x-ms-blob-type:
       - PageBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:24 GMT
+      - Sat, 20 Feb 2021 11:02:49 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -253,11 +261,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:18:30 GMT
+      - Sat, 20 Feb 2021 11:02:50 GMT
       etag:
-      - '"0x8D88245B16B45C3"'
+      - '"0x8D8D58F10A3C017"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:31 GMT
+      - Sat, 20 Feb 2021 11:02:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -274,12 +282,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:31 GMT
+      - Sat, 20 Feb 2021 11:02:51 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -295,11 +307,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:18:38 GMT
+      - Sat, 20 Feb 2021 11:02:51 GMT
       etag:
-      - '"0x8D88245B16B45C3"'
+      - '"0x8D8D58F10A3C017"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:31 GMT
+      - Sat, 20 Feb 2021 11:02:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-sequence-number:
@@ -307,7 +319,7 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:31 GMT
+      - Sat, 20 Feb 2021 11:02:50 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -326,12 +338,16 @@ interactions:
       - application/xml
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:39 GMT
+      - Sat, 20 Feb 2021 11:02:52 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -343,11 +359,11 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Fri, 06 Nov 2020 11:18:41 GMT
+      - Sat, 20 Feb 2021 11:02:52 GMT
       etag:
-      - '"0x8D88245B16B45C3"'
+      - '"0x8D8D58F10A3C017"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:31 GMT
+      - Sat, 20 Feb 2021 11:02:50 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -367,9 +383,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:41 GMT
+      - Sat, 20 Feb 2021 11:02:52 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -381,17 +397,17 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:18:48 GMT
+      - Sat, 20 Feb 2021 11:02:52 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
       - 'false'
       x-ms-snapshot:
-      - '2020-11-06T11:18:48.8943722Z'
+      - '2021-02-20T11:02:53.3899339Z'
       x-ms-version:
       - '2018-11-09'
     status:
@@ -404,12 +420,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:49 GMT
+      - Sat, 20 Feb 2021 11:02:53 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -427,17 +447,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:18:55 GMT
+      - Sat, 20 Feb 2021 11:02:53 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -456,14 +476,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-Match:
-      - '0x8D88245A38F1F41'
+      - '0x8D8D58F0E931DFE'
+      ParameterSetName:
+      - -c -n --account-name --if-match --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:18:56 GMT
+      - Sat, 20 Feb 2021 11:02:54 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -481,17 +505,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:19:03 GMT
+      - Sat, 20 Feb 2021 11:02:54 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -510,14 +534,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-Match:
       - '*'
+      ParameterSetName:
+      - -c -n --account-name --if-match --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:19:04 GMT
+      - Sat, 20 Feb 2021 11:02:55 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -535,17 +563,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:19:10 GMT
+      - Sat, 20 Feb 2021 11:02:55 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -564,14 +592,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-None-Match:
-      - '0x8D88245A38F1F41'
+      - '0x8D8D58F0E931DFE'
+      ParameterSetName:
+      - -c -n --account-name --if-none-match --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:19:11 GMT
+      - Sat, 20 Feb 2021 11:02:56 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -583,7 +615,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 11:19:18 GMT
+      - Sat, 20 Feb 2021 11:02:57 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-error-code:
@@ -600,14 +632,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-None-Match:
       - '*'
+      ParameterSetName:
+      - -c -n --account-name --if-none-match --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:19:19 GMT
+      - Sat, 20 Feb 2021 11:02:57 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -617,7 +653,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 11:19:25 GMT
+      - Sat, 20 Feb 2021 11:02:58 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -636,14 +672,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-Unmodified-Since:
       - Mon, 29 Jun 2020 06:32:00 GMT
+      ParameterSetName:
+      - -c -n --account-name --if-unmodified-since --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:19:26 GMT
+      - Sat, 20 Feb 2021 11:02:59 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -653,7 +693,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Fri, 06 Nov 2020 11:19:32 GMT
+      - Sat, 20 Feb 2021 11:02:59 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -672,14 +712,18 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
       If-Modified-Since:
       - Mon, 29 Jun 2020 06:32:00 GMT
+      ParameterSetName:
+      - -c -n --account-name --if-modified-since --auth-mode
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 11:19:33 GMT
+      - Sat, 20 Feb 2021 11:03:00 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -697,17 +741,17 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 11:19:40 GMT
+      - Sat, 20 Feb 2021 11:03:00 GMT
       etag:
-      - '"0x8D88245A38F1F41"'
+      - '"0x8D8D58F0E931DFE"'
       last-modified:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 11:18:08 GMT
+      - Sat, 20 Feb 2021 11:02:47 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
