--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_block_blob_set_tier.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_block_blob_set_tier.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.14.0 azsdk-python-azure-mgmt-storage/16.0.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Fri, 06 Nov 2020 10:50:06 GMT
+      - Sat, 20 Feb 2021 11:01:25 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11988'
+      - '11980'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:07 GMT
+      - Sat, 20 Feb 2021 11:01:26 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:50:14 GMT
+      - Sat, 20 Feb 2021 11:01:28 GMT
       etag:
-      - '"0x8D88241BE68F4B2"'
+      - '"0x8D8D58EDFC09776"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:15 GMT
+      - Sat, 20 Feb 2021 11:01:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,11 +91,11 @@ interactions:
       Content-Length:
       - '16384'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:15 GMT
+      - Sat, 20 Feb 2021 11:01:28 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -109,11 +109,11 @@ interactions:
       content-md5:
       - zjOP5omXeKrPwoQU8tlJiw==
       date:
-      - Fri, 06 Nov 2020 10:50:20 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       etag:
-      - '"0x8D88241C2152879"'
+      - '"0x8D8D58EE0860FA1"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:21 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -130,16 +130,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob set-tier
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -c -n --tier --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-access-tier:
       - Archive
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:22 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       x-ms-rehydrate-priority:
       - Standard
       x-ms-version:
@@ -153,7 +157,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:50:27 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -168,12 +172,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:28 GMT
+      - Sat, 20 Feb 2021 11:01:31 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -191,21 +199,21 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:50:34 GMT
+      - Sat, 20 Feb 2021 11:01:32 GMT
       etag:
-      - '"0x8D88241C2152879"'
+      - '"0x8D8D58EE0860FA1"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:21 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Fri, 06 Nov 2020 10:50:28 GMT
+      - Sat, 20 Feb 2021 11:01:31 GMT
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:50:21 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -224,16 +232,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob set-tier
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -c -n --tier -r --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-access-tier:
       - Cool
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:34 GMT
+      - Sat, 20 Feb 2021 11:01:32 GMT
       x-ms-rehydrate-priority:
       - High
       x-ms-version:
@@ -247,7 +259,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:50:40 GMT
+      - Sat, 20 Feb 2021 11:01:33 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -262,12 +274,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:40 GMT
+      - Sat, 20 Feb 2021 11:01:33 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -285,23 +301,23 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:50:45 GMT
+      - Sat, 20 Feb 2021 11:01:34 GMT
       etag:
-      - '"0x8D88241C2152879"'
+      - '"0x8D8D58EE0860FA1"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:21 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Fri, 06 Nov 2020 10:50:40 GMT
+      - Sat, 20 Feb 2021 11:01:33 GMT
       x-ms-archive-status:
       - rehydrate-pending-to-cool
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:50:21 GMT
+      - Sat, 20 Feb 2021 11:01:30 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -323,11 +339,11 @@ interactions:
       Content-Length:
       - '16384'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.8; Windows 10) AZURECLI/2.14.0
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:48 GMT
+      - Sat, 20 Feb 2021 11:01:34 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -341,11 +357,11 @@ interactions:
       content-md5:
       - zjOP5omXeKrPwoQU8tlJiw==
       date:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:35 GMT
       etag:
-      - '"0x8D88241D60CCC6C"'
+      - '"0x8D8D58EE40C2832"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -362,16 +378,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob set-tier
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -c -n --tier --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-access-tier:
       - Archive
       x-ms-date:
-      - Fri, 06 Nov 2020 10:50:55 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       x-ms-rehydrate-priority:
       - Standard
       x-ms-version:
@@ -385,7 +405,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:51:00 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -400,12 +420,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:51:01 GMT
+      - Sat, 20 Feb 2021 11:01:37 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -423,21 +447,21 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:51:06 GMT
+      - Sat, 20 Feb 2021 11:01:37 GMT
       etag:
-      - '"0x8D88241D60CCC6C"'
+      - '"0x8D8D58EE40C2832"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Fri, 06 Nov 2020 10:51:01 GMT
+      - Sat, 20 Feb 2021 11:01:37 GMT
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -456,16 +480,20 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob set-tier
       Connection:
       - keep-alive
       Content-Length:
       - '0'
+      ParameterSetName:
+      - -c -n --tier --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-access-tier:
       - Hot
       x-ms-date:
-      - Fri, 06 Nov 2020 10:51:07 GMT
+      - Sat, 20 Feb 2021 11:01:38 GMT
       x-ms-rehydrate-priority:
       - Standard
       x-ms-version:
@@ -479,7 +507,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 06 Nov 2020 10:51:13 GMT
+      - Sat, 20 Feb 2021 11:01:38 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -494,12 +522,16 @@ interactions:
       - '*/*'
       Accept-Encoding:
       - gzip, deflate
+      CommandName:
+      - storage blob show
       Connection:
       - keep-alive
+      ParameterSetName:
+      - -c -n --account-name --account-key
       User-Agent:
-      - azsdk-python-storage-blob/12.4.0 Python/3.7.8 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Fri, 06 Nov 2020 10:51:14 GMT
+      - Sat, 20 Feb 2021 11:01:39 GMT
       x-ms-version:
       - '2019-12-12'
     method: HEAD
@@ -517,23 +549,23 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Fri, 06 Nov 2020 10:51:19 GMT
+      - Sat, 20 Feb 2021 11:01:39 GMT
       etag:
-      - '"0x8D88241D60CCC6C"'
+      - '"0x8D8D58EE40C2832"'
       last-modified:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-access-tier:
       - Archive
       x-ms-access-tier-change-time:
-      - Fri, 06 Nov 2020 10:51:13 GMT
+      - Sat, 20 Feb 2021 11:01:39 GMT
       x-ms-archive-status:
       - rehydrate-pending-to-hot
       x-ms-blob-type:
       - BlockBlob
       x-ms-creation-time:
-      - Fri, 06 Nov 2020 10:50:54 GMT
+      - Sat, 20 Feb 2021 11:01:36 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
