changes based off PR comments'

--- a/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_check_name.yaml
+++ b/src/azure-cli/azure/cli/command_modules/ams/tests/latest/recordings/test_ams_check_name.yaml
@@ -27,20 +27,20 @@ interactions:
   response:
     body:
       string: "{\r\n  \"name\":\"ams000003\",\"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Media/mediaservices/ams000003\",\"type\":\"Microsoft.Media/mediaservices\",\"location\":\"East
-        US\",\"properties\":{\r\n    \"mediaServiceId\":\"b268eb59-a3cd-49fc-a7a1-1bfd9fff4059\",\"storageAccounts\":[\r\n
+        US\",\"properties\":{\r\n    \"mediaServiceId\":\"51b33ba9-ae34-4dc3-bd2f-908ca03d525f\",\"storageAccounts\":[\r\n
         \     {\r\n        \"id\":\"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002\",\"type\":\"Primary\"\r\n
         \     }\r\n    ],\"storageAuthentication\":\"System\",\"encryption\":{\r\n
-        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"identity\":{\r\n    \"type\":\"None\"\r\n
-        \ }\r\n}"
+        \     \"type\":\"SystemKey\"\r\n    }\r\n  },\"systemData\":{\r\n    \"createdBy\":\"hivyas@microsoft.com\",\"createdByType\":\"User\",\"createdAt\":\"2021-02-23T01:56:49.5603894Z\",\"lastModifiedBy\":\"hivyas@microsoft.com\",\"lastModifiedByType\":\"User\",\"lastModifiedAt\":\"2021-02-23T01:56:49.5603894Z\"\r\n
+        \ },\"identity\":{\r\n    \"type\":\"None\"\r\n  }\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '781'
+      - '1023'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Thu, 21 Jan 2021 00:24:02 GMT
+      - Tue, 23 Feb 2021 01:56:51 GMT
       expires:
       - '-1'
       odata-version:
@@ -85,17 +85,17 @@ interactions:
   response:
     body:
       string: "{\r\n  \"nameAvailable\":false,\"reason\":\"AlreadyExists\",\"message\":\"Already
-        in use by another Media Service account. Please try again with a name that
-        is not likely to be in use.\"\r\n}"
+        in use by another account. Please try again with a name that is not likely
+        to be in use.\"\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '177'
+      - '163'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Thu, 21 Jan 2021 00:24:02 GMT
+      - Tue, 23 Feb 2021 01:56:51 GMT
       expires:
       - '-1'
       odata-version:
@@ -113,7 +113,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1199'
     status:
       code: 200
       message: OK
@@ -152,7 +152,7 @@ interactions:
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Thu, 21 Jan 2021 00:24:03 GMT
+      - Tue, 23 Feb 2021 01:56:52 GMT
       expires:
       - '-1'
       odata-version:
@@ -202,17 +202,17 @@ interactions:
   response:
     body:
       string: "{\r\n  \"nameAvailable\":false,\"reason\":\"Invalid\",\"message\":\"The
-        Media Services account name should be between 3 and 24 characters and may
-        contain only lowercase letters and numbers.\"\r\n}"
+        Media Account account name should be between 3 and 24 characters and may contain
+        only lowercase letters and numbers.\"\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '182'
+      - '181'
       content-type:
       - application/json; odata.metadata=minimal
       date:
-      - Thu, 21 Jan 2021 00:24:04 GMT
+      - Tue, 23 Feb 2021 01:56:52 GMT
       expires:
       - '-1'
       odata-version:
@@ -265,7 +265,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Thu, 21 Jan 2021 00:24:06 GMT
+      - Tue, 23 Feb 2021 01:56:55 GMT
       expires:
       - '-1'
       pragma:
